alignment issue fix

--- a/css/home-custom.css
+++ b/css/home-custom.css
@@ -83,6 +83,105 @@ font-size: 14px;
 .benefit-dtls li {
   padding-bottom: 1.2rem;
 }
+.section3 li {
+    padding: 1rem;
+    width: 45%;
+    display: inline-block;
+}
+tr {
+  vertical-align: top;
+}
+.post {
+    width: 500px;
+  display: inline-flex;
+}
+
+.sec3-imgwrap {
+     position: relative;
+    width: 100px;
+    height: 100px;
+}
+.sec3-imgwrap img {
+  position: absolute;
+    left: -47px;
+	bottom: -70px;
+}
+#page-wrap td {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.sec3-bannercontent {
+    width: 70%;
+	margin-top: 19px;
+    margin-right: 50px;
+    margin-left: -6px;
+}
+.sec3-imgwrap3{
+	width: 50%;
+    float: right;
+}
+div#page-wrap {
+    overflow-x: auto;
+	overflow-y: hidden;
+}
+.section3 td:nth-child(even) .post{
+    background: #2B4057;
+	padding-top:30px;
+    padding-bottom: 30px;
+}
+.section3 td:nth-child(even) .sec3-title{
+	font-size: 22px;
+	line-height: 0;
+	 color: #FFFFFF;
+	font-weight:500;	
+}
+.section3 td:nth-child(even) .sec3-prof{
+	font-size: 10px;
+    color: #99CDF4;
+    font-weight: 500;	
+}
+.section3 td:nth-child(even) .sec3-cmts{
+	font-size:9px;
+	color: #E2E5E8;
+	font-weight:500;	
+}
+.section3 td:nth-child(odd) .post{
+    background: #FFFFFF;
+	padding-top: 30px;
+    padding-bottom: 30px;
+}
+.section3 td:nth-child(odd) .sec3-title{
+	font-size: 22px;
+	line-height: 0;
+	 color: #17416D;
+	font-weight:500;	
+}
+.section3 td:nth-child(odd) .sec3-prof{
+	font-size: 10px;
+    color: #17416D;
+    font-weight: 400;	
+}
+.section3 td:nth-child(odd) .sec3-cmts{
+	font-size:9px;
+	color: #17416D;
+	font-weight:500;	
+}
+.sec3-cmts p {
+    line-height: 1.5;
+}
+.sec3-comma {
+    margin-top: 2px;
+}
+.sec3-comma img {
+    width: 80%;
+    padding-left: 12px;
+}
+section.section3 {
+    background: #F4FAFF;
+    padding-top: 4rem;
+    padding-bottom: 1rem;
+}
+
 section.sidemenu-mainrow {
     width: 10%;
     font-size: 7px;
@@ -214,11 +313,13 @@ img.mask-IMG {
     font-weight: 500;
 }
 @media (min-width: 991px){
+	.navbar-dropdown .navbar-logo{
+    margin-left: 7px;
+}
 .row.con-border {
          border: 1.5px solid #D7E8F4;
-    /* margin-top: -1px; */
-    margin-left: 82px;
-    /* margin-right: 0px; */
+    margin-left: 53px !important;
+margin-right: 0px !important;
     height: 30rem;
     padding-left: 49px;
     padding-right: 32px;
@@ -279,6 +380,18 @@ width: 159%;
 }
 .cid-scOpuhkrIo .carousel-caption p{
 	margin:0;
+}
+.partnersec .container{
+	    padding-right: 0px !important;
+}
+section#section3 .container {
+    padding-right: 0px;
+}
+section#section2 .container {
+    padding-right: 0px;
+}
+.sec3col {
+	padding-right: 7px !important;
 }
 }
 @media (max-width: 991px) {
@@ -373,7 +486,7 @@ section.business {
 }
 .tit-bus {
       background-color: #90b2cb;
-    width: 25%;
+    width: 27%;
     text-align: right;
     padding-right: 1rem;
     height: 49px;
@@ -390,7 +503,7 @@ section.business {
     border-style: solid;
     border-color: #ffff;
     margin-top: -26px;
-    margin-left: 100px;
+    margin-left: 55px;
    
     padding-left: 49px;
     padding-right: 32px;
@@ -450,7 +563,7 @@ button.click {
     /* padding-top: 0.7rem; */
     /* padding-bottom: 0.7rem; */
     padding-bottom: -0.3rem;
-    margin-left: 5rem;
+    margin-left: 3.5rem;
     color: #ffff;
     font-size: 25px;
     /* margin-top: 2px; */
@@ -467,7 +580,7 @@ button.click {
 }
 .partnersec-txt {
     width: 80%;
-    padding-left: 5rem;
+    padding-left: 3.5rem;
     padding-top: 1rem;
 }
 .partnersec-txt p {
@@ -495,6 +608,24 @@ section#section5 {
     margin-top: -0.5rem;
 }
 
+.arrow-align {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+	margin-top: 1rem;
+	    cursor: pointer;
+}
+.arrow-align img {
+    width: 30px;
+}
+.sec3-arrowleft{
+	    transform: rotate(180deg);
+    margin-right: 13px;
+    opacity: 0.2;
+}
+.sec3-arrowright{
+
+}
 @media (max-width: 767px) {
 	.benefit-dtls p{
 	display: none;
@@ -573,4 +704,7 @@ a.childmenuborder {
 img.people-IMG {
     z-index: 1;
     position: relative;
+}
+.col-4.cntmar {
+    margin-left: -11px;
 }
